fixed modal expand button not showing on chrome

--- a/client/src/pages/Profile/ProgressTableRow.css
+++ b/client/src/pages/Profile/ProgressTableRow.css
@@ -7,6 +7,7 @@
 }
 
 .modal-btn {
+  display: none;
   transition-property: padding;
   transition-duration: 250ms;
 }
